--- a/assessment_3/displays/displays/client/styles/main.scss
+++ b/assessment_3/displays/displays/client/styles/main.scss
@@ -1,3 +1,27 @@
 body {
-    padding: 1em;
+    padding: 0;
+    margin: 0;
+}
+
+.Display {
+    display: none;
+
+    width: 100vw;
+    height: 100vh;
+    background: red;
+
+    &__Active {
+        display: block;
+    }
+}
+
+.Menu {
+    display: none;
+    &__Active {
+        display: block;
+    }
+}
+
+.u--display-none {
+    display: none;
 }
