--- a/assessment_3/displays/displays/client/styles/AsciiDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/AsciiDisplay.scss
@@ -4,13 +4,12 @@
 
   &_InitialText {
     width: 100%;
-    height: 20%;
   }
 
   &_AsciiBlock {
     display: flex;
     flex-wrap: nowrap;
-    height: 60%;
+    margin: 1rem 0;
   }
 
   &_MainFace {
@@ -31,10 +30,5 @@
     &__Bottom {
       align-items: flex-end;
     }
-  }
-
-  &_FinalText {
-    width: 100%;
-    height: 15%;
   }
 }
