Fixed issue with emotion js

--- a/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
@@ -1,6 +1,8 @@
 .EmotionDisplay {
+  &.Display__Active {
+    display: flex;
+  }
   padding: 1rem;
-  display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   &_MainBlock {
