--- a/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
@@ -17,10 +17,25 @@
   }
 
   &_FaceSegment {
+    position: relative;
     width: fit-content;
     height: fit-content;
     &__Active {
       border: 1px dashed $color-white;
     }
+
+    &_Container {
+      width: 50%;
+    }
+  }
+
+  &_IdTag {
+    @extend .t--terminal;
+    font-size: 18px;
+    color: red;
+    position: absolute;
+    top: 50%;
+    left: -50px;
+    transform: translateY(-50%);
   }
 }
