--- a/assessment_3/displays/displays/client/styles/typography.scss
+++ b/assessment_3/displays/displays/client/styles/typography.scss
@@ -1,4 +1,36 @@
+@font-face {
+  font-family: 'IBM Plex Mono', monospace;
+  src: url('/fonts/IBMPlexMono-Bold.ttf');
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono', monospace;
+  src: url('/fonts/IBMPlexMono-SemiBold.ttf');
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono', monospace;
+  src: url('/fonts/IBMPlexMono-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono', monospace;
+  src: url('/fonts/IBMPlexMono-Regular.ttf');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'IBM Plex Mono', monospace;
+  src: url('/fonts/IBMPlexMono-Light.ttf');
+  font-weight: 300;
+}
+
+
+
 .t--terminal {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'IBM Plex Mono', monospace;
   font-weight: 600;
 }
