Changed user ID display

--- a/assessment_3/displays/displays/client/styles/main.scss
+++ b/assessment_3/displays/displays/client/styles/main.scss
@@ -53,5 +53,9 @@ a {
     top: 0;
 }
 
+// Components
+@import './UserId.scss';
+
+// Displays
 @import './AsciiDisplay.scss';
 @import './EmotionDisplay.scss';
