--- a/assessment_3/displays/displays/client/styles/typography.scss
+++ b/assessment_3/displays/displays/client/styles/typography.scss
@@ -34,3 +34,9 @@
   font-family: 'IBM Plex Mono', monospace;
   font-weight: 600;
 }
+
+.t--terminal-large {
+  font-family: 'IBM Plex Mono', monospace;
+  font-weight: 600;
+  font-size: 2rem;
+}
