--- a/assessment_3/displays/displays/client/styles/utils.scss
+++ b/assessment_3/displays/displays/client/styles/utils.scss
@@ -2,6 +2,7 @@ $color-black : #121211;
 $color-off-black : #171716;
 $color-dark-grey : #232423;
 $color-grey : #30302F;
+$color-blue : #0029F3;
 $color-light-green : #96e3b6;
 $color-green : #6FCF97;
 $color-white : #EEE;
