Added basic delauney tesselation

--- a/assessment_3/displays/displays/client/styles/FacePointsDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/FacePointsDisplay.scss
@@ -1,7 +1,9 @@
 .FacePointsDisplay {
   padding: 1rem 0;
-  display: flex;
   justify-content: center;
+  &.Display__Active {
+    display: flex;
+  }
   &_Wrapper {
     margin: auto auto;
     display: flex;
