Added Bargraphs to sex display

--- a/assessment_3/displays/displays/client/styles/main.scss
+++ b/assessment_3/displays/displays/client/styles/main.scss
@@ -60,3 +60,4 @@ a {
 @import './AsciiDisplay.scss';
 @import './EmotionDisplay.scss';
 @import './FacePointsDisplay.scss';
+@import './SexDisplay.scss';
