Adjusted sizes of all displays

--- a/assessment_3/displays/displays/client/styles/SexDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/SexDisplay.scss
@@ -1,6 +1,13 @@
 .SexDisplay {
   padding: 2rem;
+  &.Display__Active {
+    display: flex;
+  }
+  flex-direction: column;
+  align-items: center;
   &_InitialText {
     height: 95px;
+
   }
 }
+
