--- a/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
+++ b/assessment_3/displays/displays/client/styles/EmotionDisplay.scss
@@ -17,14 +17,15 @@
   }
 
   &_FaceSegment {
-    position: relative;
     width: fit-content;
     height: fit-content;
+    @extend .t--terminal-small;
     &__Active {
       border: 1px dashed $color-white;
     }
 
     &_Container {
+      position: relative;
       width: 50%;
     }
   }
@@ -38,4 +39,5 @@
     left: -50px;
     transform: translateY(-50%);
   }
+
 }
